tests/integration/snapshots/integration__conformance__n_object_bracket_key.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{[: "x"}

stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `[`
 --> stdin:1:2
  |
1 | {[: "x"}
  | -^
  | |
  | expected due to `{`
