tests/integration/snapshots/integration__conformance__n_object_double_colon.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"x"::"b"}
stdout ---

stderr ---
error: expected json value, found `:`
 --> stdin:1:6
  |
1 | {"x"::"b"}
  |     -^
  |     |
  |     expected due to `:`
